feat(connectors): ajoute le connecteur Argus
